--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,7 @@ Django==4.0.4
 django-ckeditor==6.4.2
 django-heroku==0.3.1
 django-js-asset==2.0.0
+django-test-without-migrations==0.6
 gunicorn==20.1.0
 Pillow==9.1.1
 psycopg2==2.9.3
