--- a/requirements.txt
+++ b/requirements.txt
@@ -2,13 +2,15 @@ asgiref==3.5.2
 dj-database-url==0.5.0
 Django==4.0.4
 django-ckeditor==6.4.2
-django-heroku==0.3.1
+django-extensions==3.1.5
 django-js-asset==2.0.0
-django-test-without-migrations==0.6
+django-on-heroku==1.1.2
 gunicorn==20.1.0
 Pillow==9.1.1
 psycopg2==2.9.3
+psycopg2-binary==2.9.3
 python-decouple==3.6
+python-dotenv==0.20.0
 sqlparse==0.4.2
 tzdata==2022.1
 whitenoise==6.1.0
